add unit test for semantic field mapper